--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+@import '~bootstrap/scss/bootstrap.scss';
 
 html,
 body,
@@ -6,5 +7,5 @@ body,
 .app {
   height: 100%;
   width: 100%;
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
 }
